CDR-2305 config template preload + error handling
- TemplateService::find…By…: no Optional result
- configurable template cache init
- cleanup template error handling (internal vs. external)
- composition validation: cleanup error handling